update db and swagger
